<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.authorization.life</groupId>
    <artifactId>authorization-life</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>authorization-life</name>

    <description>Authorization Engineering</description>

    <properties>
        <!--当前工程中的所有模块，版本统一进行控制-->
        <revision>1.0.0</revision>
        <!-- resource.delimiter 标签参考：https://www.jianshu.com/p/4410613bb36f -->
        <resource.delimiter>@</resource.delimiter>

        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>


        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <duplicate-finder.version>1.5.1</duplicate-finder.version>
        <!--
            查看版本依赖关系:
            spring-cloud 官网：  https://spring.io/projects/spring-cloud
            spring-cloud-alibaba 官网：  https://github.com/alibaba/spring-cloud-alibaba/wiki/%E7%89%88%E6%9C%AC%E8%AF%B4%E6%98%8E
            springboot 官网： https://spring.io/projects/spring-boot
            2022年9月4日
            得出结果：
            boot：2.7.3
            cloud：2021.0.3
            cloud-alibaba：2.2.8.RELEASE
            spring-security：5.7.3
            authorization-server：0.3.1
        -->
        <!--基本依赖-->
        <mica.version>2.7.3</mica.version>
        <spring-boot.version>2.7.3</spring-boot.version>
        <spring-cloud.version>2021.0.3</spring-cloud.version>
        <spring-cloud-alibaba.version>2.2.8.RELEASE</spring-cloud-alibaba.version>
        <jackson-bom.version>2.13.3</jackson-bom.version>

        <!--权限认证依赖-->
        <spring-security.version>5.7.3</spring-security.version>
        <nimbus-jose-jwt.version>9.23</nimbus-jose-jwt.version>
        <oauth2-oidc-sdk.version>9.27</oauth2-oidc-sdk.version>
        <oauth2-authorization-server.version>0.3.1</oauth2-authorization-server.version>

        <!--数据库依赖-->
        <mybatis-plus.version>3.5.2</mybatis-plus.version>
        <druid.version>1.2.9</druid.version>
        <pagehelper.version>1.4.5</pagehelper.version>
        <!--工具依赖-->
        <hutool.version>5.8.8</hutool.version>
        <guava.version>31.1-jre</guava.version>
        <easyexcel.version>3.1.1</easyexcel.version>
    </properties>

    <modules>
        <module>life-parent</module>
        <module>life-start-parent</module>

        <module>life-common</module>
        <module>life-core</module>

        <module>life-gateway</module>
        <module>life-authserver</module>
        <module>life-system</module>

    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>life-parent</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>life-common</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>life-core</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>util-start-life</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>mybatis-start-life</artifactId>
                <version>${revision}</version>
            </dependency>
            <dependency>
                <groupId>com.authorization.life</groupId>
                <artifactId>redis-start-life</artifactId>
                <version>${revision}</version>
            </dependency>
            <!--以上为工程内部的子工程-->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <!--以上为工具包依赖-->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.pagehelper</groupId>
                <artifactId>pagehelper-spring-boot-starter</artifactId>
                <version>${pagehelper.version}</version>
            </dependency>
            <!--以上为数据库连接-->
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>oauth2-oidc-sdk</artifactId>
                <version>${oauth2-oidc-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.nimbusds</groupId>
                <artifactId>nimbus-jose-jwt</artifactId>
                <version>${nimbus-jose-jwt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-oauth2-authorization-server</artifactId>
                <version>${oauth2-authorization-server.version}</version>
            </dependency>
            <!--以上为security+oauth2-->
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson-bom.version}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-bom</artifactId>
                <version>${spring-security.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--以上为基础的导入依赖-->
        </dependencies>
    </dependencyManagement>

    <repositories>
        <repository>
            <id>aliyun-repos</id>
            <url>http://maven.aliyun.com/nexus/content/groups/public/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <build>
        <finalName>${project.artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <!--源码包-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!--jar包-->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <testSource>${java.version}</testSource>
                        <testTarget>${java.version}</testTarget>
                    </configuration>
                </plugin>
                <!--springboot启动类的jar包-->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <!--
                    配置参考：
                    https://blog.csdn.net/tian830937/article/details/119525273
                    -->
                    <configuration>
                        <addResources>true</addResources>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.basepom.maven</groupId>
                    <artifactId>duplicate-finder-maven-plugin</artifactId>
                    <version>${duplicate-finder.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
